# trade

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
tests/: test_ai.py  test_cli_router.py  test_config.py
trade/: __init__.py  __main__.py  ai.py  cli.py  config.py  display.py
trade/brokers/: __init__.py  angelone.py  base.py  yahoo.py
